--- a/css/styles.css
+++ b/css/styles.css
@@ -19,51 +19,33 @@ body {
   list-style: none;
   justify-content: center;
   gap: 24px;
-  row-gap: 48px;
+  row-gap: 24px;
 }
 
 /* Одиничний елемент галереї */
 .gallery-item {
-  width: 360px;
+  width: 450px;
   height: 300px;
-
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
   overflow: hidden;
-  background-color: #ffffff;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
 
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
+}
 /* Ефект при наведенні */
 .gallery-item:hover {
   transform: translateY(-4px);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
 }
 
-/* Стилізація посилання, яке обгортає картинку */
 .gallery-link {
   display: block;
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Картинка всередині елемента галереї */
-.gallery-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+}
+
+.gallery-image {
+  height: 100%;
+  min-width: 100%;
+  max-width: 100%;
   display: block;
-}
-
-/* Медіа-запити для адаптивності */
-@media (max-width: 900px) {
-  .gallery-item {
-    flex-basis: calc(50% - 16px); /* два елементи в ряд */
-  }
-}
-
-@media (max-width: 600px) {
-  .gallery-item {
-    flex-basis: 100%; /* один елемент в ряд */
-  }
+  object-fit: cover;
 }
